Bug 1674829 - part1 : dispatch 'MozNoControlsBlockedVideo' to video control. r=Gijs

When autoplay media gets blocked, dispatch `MozNoControlsBlockedVideo` event to video control in order to show `click-to-play` icon.

Differential Revision: https://phabricator.services.mozilla.com/D97505